src/objects/Partner_Action_Requests__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Requires_Grace_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Requires Grace Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>actionCode__c</fullName>
        <label>actionCode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Partner Action Requests</label>
</CustomObject>